<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingrecipe.activities.RecipeItemsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/error_message"
        tools:text="@string/label_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loading_indicator"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>
