...
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:alpha="0.12"
            android:background="@android:color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

...
